Add account resource and association to user

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,8 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     = render "layouts/navbar"
+    - if flash[:alert]
+      = flash[:alert]
+    - if flash[:notice]
+      = flash[:notice]
     = yield
