--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,18 +1,26 @@
 .navbar-fixed
   %nav
     .nav-wrapper
-      %a.brand-logo{:href => "#!"} Erefuge
+      = link_to "Erefuge", root_path, {:class => "brand-logo black-text"}
       %a.button-collapse{"data-activates" => "mobile-demo", :href => "#"}
         %i.material-icons menu
       %ul.right.hide-on-med-and-down
+        - if current_user
+          %li.nav-link
+            = link_to "Log Out", destroy_user_session_path, {:class => "black-text", :method => :delete}
+        - else
+          %li.nav-link
+            = link_to "Sign In", new_user_session_path, {:class => "black-text"}
+          %li.nav-link
+            = link_to "Sign Up", new_user_registration_path, {:class => "black-text"}
         %li
-          %a{:href => "sass.html"} Sass
+          %a{:href => "sass.html", :class => "black-text"} Sass
         %li
-          %a{:href => "badges.html"} Components
+          %a{:href => "badges.html", :class => "black-text"} Components
         %li
-          %a{:href => "collapsible.html"} Javascript
+          %a{:href => "collapsible.html", :class => "black-text"} Javascript
         %li
-          %a{:href => "mobile.html"} Mobile
+          %a{:href => "mobile.html", :class => "black-text"} Mobile
       %ul#mobile-demo.side-nav
         %li
           %a{:href => "sass.html"} Sass
