--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,7 +9,7 @@
           %li.nav-link
             = link_to "Log Out", destroy_user_session_path, {:class => "black-text", :method => :delete}
           - if current_user.admin?
-            %li= link_to "Admin", rails_admin_path
+            %li= link_to "Admin", rails_admin_path, {:class => "black-text"}
         - else
           %li.nav-link
             = link_to "Sign In", new_user_session_path, {:class => "black-text"}
@@ -20,7 +20,7 @@
         -#   %li.nav-link
         -#     = link_to "Log Out", destroy_user_session_path, {:class => "black-text", :method => :delete}
         -# - if current_user.admin?
-        -#       %li= link_to "Admin", rails_admin_path
+        -#       %li= link_to "Admin", rails_admin_path, {:class => "black-text"}
         -# - else
         -#   %li.nav-link
         -#     = link_to "Sign In", new_user_session_path, {:class => "black-text"}
