--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -14,7 +14,7 @@
         %h2.section-heading ERefuge is a social networking app that creates cultural exchanges among locals and refugees.
         %hr.light/
         %p.text-faded There's so much to love about different cultures, and sharing those experiences will help refugees integrate to their new home as well as broaden the horizons of locals as well.
-        = link_to "Sign Up", new_user_registration_path, {:class => "waves-effect waves-light btn blue darken-2"}
+        = link_to "Sign Up Now", new_user_registration_path, {:class => "waves-effect waves-light btn blue darken-2"}
 %section#services
   .container
     .row
