--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,6 +9,7 @@
           - if current_user.account
             %li= link_to "Your Account", account_path(current_user.account), {:class => "black-text"}
           %li= link_to "Events", events_path, {:class => "black-text"}
+          %li= link_to "Messages", chat_rooms_path, {:class => "black-text"}
           %li= link_to "Log Out", destroy_user_session_path, {:class => "black-text nav-link", :method => :delete}
           - if current_user.admin?
             %li= link_to "Admin", rails_admin_path, {:class => "black-text"}
