--- a/app/assets/stylesheets/home/_hero.scss
+++ b/app/assets/stylesheets/home/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
   background-image: url("../images/hero-lighthouse.jpeg");
+  color: #f2f2f2;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
