--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,17 +1,7 @@
-%footer#contact
+%footer
   .container
     .row
-      .col-lg-8.col-lg-offset-2.text-center
-        %h2.section-heading Do more
-        %hr.primary/
-        %p Ready to take on the adventure? Join our team or help us by contributing on our github, or in other means. We're always looking for more ways that we can help people who are desperately in need through technological means.
-      .col-lg-4.col-lg-offset-2.text-center
-        %i.fa.fa-github.fa-3x.wow.bounceIn
-        %p
-          %a.btn.btn-default.btn-xl{:href => "https://github.com/RefugeeMatchmaking/HackZurich"}
-            %i.fa.fa-github
-            RefugeeMatchmaking
-      .col-lg-4.text-center
-        %i.fa.fa-envelope-o.fa-3x.wow.bounceIn{"data-wow-delay" => ".1s"}
-        %p
-          %a{:href => "mailto:team@hackzuri.ch"} team@hackzuri.ch
+      .col.s10.offset-s1
+        %h5 ABOUT EREFUGE
+        %p ERefuge exists as a means of connecting people from different countries and cultures.  We believe in creating experiences that enrich the lives of others, broaden cultural horizons, and create a support network for refugees that are new to America.
+        %p &copy; 2016 Chip Carnes
