Compressed hero image

--- a/app/assets/stylesheets/home/_hero.scss
+++ b/app/assets/stylesheets/home/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url("../images/hero-lighthouse.jpeg");
+  background-image: url("../images/hero-lighthouse.jpg");
   color: #f2f2f2;
   background-size: cover;
   background-position: center;
