--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -12,12 +12,12 @@
           %li= link_to "Messages", chat_rooms_path, {:class => "black-text"}
           %li= link_to "Log Out", destroy_user_session_path, {:class => "black-text nav-link", :method => :delete}
           - if current_user.admin?
-            %li= link_to "Admin", rails_admin_path, {:class => "black-text"}
+            %li= link_to "Admin", rails_admin_path, {:class => "black-text", :id => "nav-admin"}
         - else
           %li.nav-link
             = link_to "Sign In", new_user_session_path, {:class => "black-text"}
           %li.nav-link
-            = link_to "Sign Up", new_user_registration_path, {:class => "black-text"}
+            = link_to "Sign Up", new_user_registration_path, {:class => "black-text", :id => "nav-signup"}
       %ul#mobile-demo.side-nav
         - if current_user
           - if current_user.account
