Change default url for mailer in config-production

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,10 +10,11 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     = render "layouts/navbar"
-    - if flash[:alert]
-      = flash[:alert]
-    - if flash[:notice]
-      = flash[:notice]
+    .container
+      - if flash[:alert]
+        = flash[:alert]
+      - if flash[:notice]
+        = flash[:notice]
     .content
       = yield
     = render "layouts/footer"
