Edit chat room and message layout

--- a/app/views/chat_rooms/_chat_room.html.haml
+++ b/app/views/chat_rooms/_chat_room.html.haml
@@ -1,2 +1,5 @@
-%li
-  = link_to "Enter #{chat_room.title}", chat_room_path(chat_room)
+.col.s12.m4
+  .card.blue-grey.lighten-4
+    .card-content.white-text
+      %li
+        = link_to "Enter #{chat_room.title}", chat_room_path(chat_room)
