--- a/app/views/chat_rooms/_form.html.haml
+++ b/app/views/chat_rooms/_form.html.haml
@@ -2,6 +2,6 @@
   .col.s6.offset-s3
     = simple_form_for @chat_room do |f|
       = f.error_notification
-      .form-inputs
-        = f.input :title, required: true, autofocus: true, class: 'form-control'
+      .input-field
+        = f.input :title, required: true, autofocus: true
       = f.button :submit, {class: 'btn btn-primary'}
