--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,5 +1,4 @@
-.col.s12.m7
-  -# %h2.header
+.col.s12.m6.offset-m1
   .card.horizontal
     .card-image
       =image_tag message.user.account.avatar.url(:thumb)
