--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -1,14 +1,17 @@
 %h1.center-align= @chat_room.title
 
 .row
-  #messages{"data-chat-room-id" => @chat_room.id}
-    = render @chat_room.messages
+  .col.s12.m6.offset-m1
+    #messages{"data-chat-room-id" => @chat_room.id}
+      = render @chat_room.messages
 
-  .col.s12.m4.offset-m1
-    = simple_form_for @message, url: '#' do |f|
-      .input-field
-        =f.label "Your message:"
-        =f.text_field :body, {class: 'materialize-textarea'}
-        %small From 2 to 1000 characters
+  .col.s12.m4.offset-m1.message-form
+    .card
+      .card-content
+        = simple_form_for @message, url: '#' do |f|
+          .input-field
+            =f.label "Your message:"
+            =f.text_field :body, {class: 'materialize-textarea'}
+            %small From 2 to 1000 characters
 
-      =f.button :submit, "Post", {class: 'btn'}
+          =f.button :submit, "Post", {class: 'btn'}
