--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,6 @@
         = flash[:alert]
       - if flash[:notice]
         = flash[:notice]
-    .content
+    .content.grey.lighten-3
       = yield
     = render "layouts/footer"
