--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,12 @@
+.events-header {
+  background: #1e5f6e;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
+
+}
+
 iframe {
   width: 100%;
   height: 400px;
